# hw07-group24

./: .gitignore  LICENSE  Makefile  README.md  contribution_statement.md  environment.yml  main-Copy1.ipynb  main.ipynb  requirements.txt  setup.cfg  test_utils.py
.ipynb_checkpoints/: Makefile-checkpoint  main-checkpoint.ipynb
models/: naomi_model.joblib  test_model.joblib  winston_model.joblib
notebooks/: EDA-Copy1.ipynb  EDA.ipynb  FeatureEngineering.ipynb  ModelTesting.ipynb  Modeling-Copy1.ipynb  Modeling.ipynb  utils.py
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  FeatureEngineering-checkpoint.ipynb  ModelTesting-checkpoint.ipynb  Modeling-checkpoint.ipynb  utils-checkpoint.py
notebooks/TrainingTestingData/v1(Kavin)/: X_test.csv  y_test.csv  y_train.csv
notebooks/tests/: test_utils.py
notebooks/utils/: utils.py
projecttools/: utils.py
projecttools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projecttools/.ipynb_checkpoints/: utils-checkpoint.py
