# Declarative configuration for setup.py

[metadata]
name             = projecttools
version          = attr: projecttools.__version__
author           = George McIntire
author_email     = george_mcintire@berkeley.edu
description      = A Python library for the utils functions in our project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = helper functions, utils
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.6,
install_requires =
	scikit-learn

[options.packages.find]
exclude =
    examples*
    docs*